ci: run gluten UT as packed JVM jobs instead of one mvn per suite
Wall time on a 12-core / 20-thread box (12188 tests, JDK 11):
  one mvn per suite, JOBS=6           34.5 min test phase
  JVM jobs, JOBS=8                    19.2 min
  + C1-only JIT, 90s batches, JOBS=10 14.2 min
  JOBS=12                             13.4 min (memory-bound after this)
  2-way CI matrix, each shard          7.2 min
The matrix is CPU-bound at ~200 JVM thread-minutes; under 10 minutes on
one runner is not reachable by scheduling alone, hence the 2-shard matrix.

What changed:
- SuiteClassifier.java: discover runnable test classes by loading them on
  the module's test classpath (concrete org.scalatest.Suite with a public
  no-arg ctor, or classes with @org.junit.Test), instead of a class-name
  regex. Drops 25 traits / helpers that ran as 0-case "suites" and picks
  up 5 real suites the regex missed. Also lists each suite's test names.
- plan.py: packs small suites into ~90 s batches (one JVM each, first-fit
  decreasing), splits suites heavier than 120 s into test shards (`-t`)
  balanced by per-test timings, orders heaviest first; SHARD_INDEX /
  SHARD_COUNT deal jobs round-robin across CI runners.
- run.sh: per module, one `mvn dependency:build-classpath`; per job, one
  bwrap-isolated JVM running scalatest Runner (or JUnitCore) directly with
  the poms' extraJavaTestArgs (read via help:evaluate). This removes the
  ~17 s of mvn + JVM + Spark warm-up that every suite paid before.
  JVMs get -Xmx2g / limited G1 threads / C1-only JIT (the default 1/4-RAM
  heap swapped the machine with 10 JVMs; ParallelGC broke
  DynamicOffHeapSizingSuite; C1-only measured -13% CPU). Each job also gets
  a private spark-warehouse/ bind and its own Derby home: test shards of one
  suite and concurrent Hive suites otherwise collide in the module cwd.
- summarize.py: failures from the JUnit XML, aborts from the job log,
  `(jvm-failed)` when a JVM dies; stale-entry check only considers entries
  this run 